<resources>
    <string name="app_name" translatable="false">mercury</string>
    <string name="action_settings">Preferencias</string>
    <string name="action_share">Compartir</string>
    <string name="action_refresh_artists_ranking">Refrescar el ranking</string>
    <string name="action_about">Acerca de...</string>
    <string name="error_load_artists">Error cargando artistas</string>
    <string name="error_pref_artists_rank_number">Valor fuera de rango (1-50)</string>
    <string name="error_network">Es necesario conexión a red</string>
    <string name="title_activity_artist">Detalle del artista</string>
    <string name="title_activity_settings">Preferencias</string>
    <string name="title_activity_about">Acerca de...</string>

    <string name="pref_artists_rank_number_key" translatable="false">artistsRankingNumber</string>
    <string name="pref_artists_rank_number_label">Número de artistas del ranking (1-50)</string>
    <string name="pref_artists_rank_number_default" translatable="false">10</string>
    <string name="pref_artists_rank_number_min" translatable="false">1</string>
    <string name="pref_artists_rank_number_max" translatable="false">50</string>


    <string name="pref_artists_rank_genre_key" translatable="false">artistsRankingGenres</string>
    <string name="pref_artists_rank_genre_label">Género</string>
    <string name="pref_artists_rank_genre_default" translatable="false">all</string>
    <string name="pref_artists_rank_genre_default_name">todos los géneros</string>

    <string name="pref_artists_rank_expiration_date_key" translatable="false">artistRankingExpirationDate</string>
    <string name="pref_artists_rank_settings_changed_key" translatable="false">rankSettingsChanged</string>
    <string name="pref_artists_rank_settings_changed_default" translatable="false">0</string>

    <string name="item_artists_image_width" translatable="false">150</string>
    <string name="item_artists_image_height" translatable="false">150</string>
    <string name="item_artists_top_image_width" translatable="false">500</string>
    <string name="item_artists_top_image_height" translatable="false">500</string>

    <string name="echonest_data_message_all_genres">Información proporcionada por Echo Nest para todos los géneros. Fecha de última actualización: %1$s</string>
    <string name="echonest_data_message">Información proporcionada por Echo Nest para el género %1$s. Fecha de última actualización: %2$s</string>

    <string name="artist_share_string_all_genres">%1$s está en el puesto número %2$d del ranking de Mercury. #Mercury</string>
    <string name="artist_share_string">%1$s está en el puesto número %2$d del ranking de Mercury para el género %3$s. #Mercury</string>

    <string name="selected_genre">Género</string>
    <string name="artist_genres">Géneros</string>
    <string name="last_update_date">Actualizado</string>

    <string name="about_version" translatable="false">v.1.1.0</string>
    <string name="about_developed_by" translatable="false">desarrollado por</string>
    <string name="about_developer" translatable="false">\@ricardonavarrom</string>
    <string name="about_github_url" translatable="false">https://github.com/ricardonavarrom</string>
    <string name="about_twitter_url" translatable="false">https://twitter.com/ricardonavarrom</string>
</resources>
