<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_artists_rank_number_label"
        android:key="@string/pref_artists_rank_number_key"
        android:defaultValue="@string/pref_artists_rank_number_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_artists_rank_genre_label"
        android:key="@string/pref_artists_rank_genre_key"
        android:entries="@array/genres_labels"
        android:entryValues="@array/genres_values"
        android:defaultValue="@string/pref_artists_rank_genre_default"/>
</PreferenceScreen>
