<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="50dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:gravity="center|top"
    tools:context=".AboutFragment"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:id="@+id/about_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/about_image" />

    <TextView
        android:id="@+id/about_version"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/about_version"
        android:textSize="12sp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/about_developed_by"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/about_developed_by"
        android:textSize="12sp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/about_develop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/about_developer"
        android:textSize="20sp"
        android:layout_marginBottom="18dp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical">

        <ImageView
            android:id="@+id/about_github_image"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/github"
            android:layout_marginRight="30dp"/>

        <ImageView
            android:id="@+id/about_twitter_image"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/twitter" />

    </LinearLayout>

</LinearLayout>
